@@ -16,12 +16,15 @@
 
 package com.android.server.art;
 
+import static android.app.ActivityManager.RunningAppProcessInfo;
+
 import static com.android.server.art.ArtFileManager.ProfileLists;
 import static com.android.server.art.ArtFileManager.UsableArtifactLists;
 import static com.android.server.art.ArtFileManager.WritableArtifactLists;
 import static com.android.server.art.DexMetadataHelper.DexMetadataInfo;
 import static com.android.server.art.PrimaryDexUtils.DetailedPrimaryDexInfo;
 import static com.android.server.art.PrimaryDexUtils.PrimaryDexInfo;
+import static com.android.server.art.ProfilePath.PrimaryCurProfilePath;
 import static com.android.server.art.ProfilePath.WritableProfilePath;
 import static com.android.server.art.ReasonMapping.BatchDexoptReason;
 import static com.android.server.art.ReasonMapping.BootReason;
@@ -37,6 +40,7 @@ import android.annotation.NonNull;
 import android.annotation.Nullable;
 import android.annotation.SystemApi;
 import android.annotation.SystemService;
+import android.app.ActivityManager;
 import android.app.job.JobInfo;
 import android.apphibernation.AppHibernationManager;
 import android.content.BroadcastReceiver;
@@ -54,6 +58,9 @@ import android.os.SystemProperties;
 import android.os.UserHandle;
 import android.os.UserManager;
 import android.os.storage.StorageManager;
+import android.system.ErrnoException;
+import android.system.Os;
+import android.system.OsConstants;
 import android.text.TextUtils;
 import android.util.Pair;
 
@@ -106,7 +113,6 @@ import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -184,7 +190,7 @@ public final class ArtManagerLocal {
     public int handleShellCommand(@NonNull Binder target, @NonNull ParcelFileDescriptor in,
             @NonNull ParcelFileDescriptor out, @NonNull ParcelFileDescriptor err,
             @NonNull String[] args) {
-        return new ArtShellCommand(this, mInjector.getPackageManagerLocal(), mInjector.getContext())
+        return new ArtShellCommand(this, mInjector.getPackageManagerLocal())
                 .exec(target, in.getFileDescriptor(), out.getFileDescriptor(),
                         err.getFileDescriptor(), args);
     }
@@ -196,8 +202,8 @@ public final class ArtManagerLocal {
     }
 
     /**
-     * Deletes dexopt artifacts of a package, including the artifacts for primary dex files and the
-     * ones for secondary dex files. This includes VDEX, ODEX, and ART files.
+     * Deletes dexopt artifacts (including cloud dexopt artifacts) of a package, for primary dex
+     * files and for secondary dex files. This includes VDEX, ODEX, ART, SDM, and SDC files.
      *
      * Also deletes runtime artifacts of the package, though they are not dexopt artifacts.
      *
@@ -225,6 +231,9 @@ public final class ArtManagerLocal {
             }
             for (RuntimeArtifactsPath runtimeArtifacts : list.runtimeArtifacts()) {
                 freedBytes += mInjector.getArtd().deleteRuntimeArtifacts(runtimeArtifacts);
+            }
+            for (SecureDexMetadataWithCompanionPaths sdmSdcFiles : list.sdmFiles()) {
+                freedBytes += mInjector.getArtd().deleteSdmSdcFiles(sdmSdcFiles);
             }
             return DeleteResult.create(freedBytes);
         } catch (RemoteException e) {
@@ -384,13 +393,17 @@ public final class ArtManagerLocal {
     }
 
     /**
-     * Resets the dexopt state of the package as if the package is newly installed.
+     * Resets the dexopt state of the package as if the package is newly installed without cloud
+     * dexopt artifacts (SDM files).
      *
-     * More specifically, it clears reference profiles, current profiles, any code compiled from
-     * those local profiles, and runtime artifacts. If there is an external profile (e.g., a cloud
-     * profile), the code compiled from that profile will be kept.
+     * More specifically,
+     * - It clears current profiles, reference profiles, and all dexopt artifacts (including cloud
+     *   dexopt artifacts).
+     * - If there is an external profile (e.g., a cloud profile), the reference profile will be
+     *   re-created from that profile, and dexopt artifacts will be regenerated for that profile.
      *
-     * For secondary dex files, it also clears all dexopt artifacts.
+     * For secondary dex files, it clears all profiles and dexopt artifacts without regeneration
+     * because secondary dex files are supposed to be unknown at install time.
      *
      * @hide
      */
@@ -889,7 +902,7 @@ public final class ArtManagerLocal {
                                         .map(envVar -> Constants.getenv(envVar))
                                         .filter(classpath -> !TextUtils.isEmpty(classpath))
                                         .flatMap(classpath -> Arrays.stream(classpath.split(":")))
-                                        .collect(Collectors.toList());
+                                        .toList();
 
         var options = new MergeProfileOptions();
         options.forceMerge = true;
@@ -996,19 +1009,8 @@ public final class ArtManagerLocal {
     @RequiresApi(Build.VERSION_CODES.UPSIDE_DOWN_CAKE)
     public void dump(
             @NonNull PrintWriter pw, @NonNull PackageManagerLocal.FilteredSnapshot snapshot) {
-        dump(pw, snapshot, false /* verifySdmSignatures */);
-    }
-
-    /**
-     * Same as above, but allows to specify options.
-     *
-     * @hide
-     */
-    @RequiresApi(Build.VERSION_CODES.UPSIDE_DOWN_CAKE)
-    public void dump(@NonNull PrintWriter pw,
-            @NonNull PackageManagerLocal.FilteredSnapshot snapshot, boolean verifySdmSignatures) {
         try (var pin = mInjector.createArtdPin()) {
-            new DumpHelper(this).dump(pw, snapshot, verifySdmSignatures);
+            new DumpHelper(this).dump(pw, snapshot);
         }
     }
 
@@ -1024,21 +1026,9 @@ public final class ArtManagerLocal {
     @RequiresApi(Build.VERSION_CODES.UPSIDE_DOWN_CAKE)
     public void dumpPackage(@NonNull PrintWriter pw,
             @NonNull PackageManagerLocal.FilteredSnapshot snapshot, @NonNull String packageName) {
-        dumpPackage(pw, snapshot, packageName, false /* verifySdmSignatures */);
-    }
-
-    /**
-     * Same as above, but allows to specify options.
-     *
-     * @hide
-     */
-    @RequiresApi(Build.VERSION_CODES.UPSIDE_DOWN_CAKE)
-    public void dumpPackage(@NonNull PrintWriter pw,
-            @NonNull PackageManagerLocal.FilteredSnapshot snapshot, @NonNull String packageName,
-            boolean verifySdmSignatures) {
         try (var pin = mInjector.createArtdPin()) {
-            new DumpHelper(this).dumpPackage(pw, snapshot,
-                    Utils.getPackageStateOrThrow(snapshot, packageName), verifySdmSignatures);
+            new DumpHelper(this).dumpPackage(
+                    pw, snapshot, Utils.getPackageStateOrThrow(snapshot, packageName));
         }
     }
 
@@ -1072,6 +1062,10 @@ public final class ArtManagerLocal {
             }
             for (RuntimeArtifactsPath runtimeArtifacts : artifactLists.runtimeArtifacts()) {
                 artifactsSize += artd.getRuntimeArtifactsSize(runtimeArtifacts);
+            }
+            for (SecureDexMetadataWithCompanionPaths sdmFile : artifactLists.sdmFiles()) {
+                // We don't count SDC files because they are presumed to be tiny.
+                artifactsSize += artd.getSdmFileSize(sdmFile);
             }
 
             ProfileLists profileLists = mInjector.getArtFileManager().getProfiles(pkgState, pkg,
@@ -1136,6 +1130,7 @@ public final class ArtManagerLocal {
             // - The dexopt artifacts, if they are up-to-date and the app is not hibernating.
             // - Only the VDEX part of the dexopt artifacts, if the dexopt artifacts are outdated
             //   but the VDEX part is still usable and the app is not hibernating.
+            // - The SDM and SDC files, if they are up-to-date and the app is not hibernating.
             // - The runtime artifacts, if dexopt artifacts are fully or partially usable and the
             //   usable parts don't contain AOT-compiled code. (This logic must be aligned with the
             //   one that determines when runtime images can be loaded in
@@ -1143,6 +1138,7 @@ public final class ArtManagerLocal {
             List<ProfilePath> profilesToKeep = new ArrayList<>();
             List<ArtifactsPath> artifactsToKeep = new ArrayList<>();
             List<VdexPath> vdexFilesToKeep = new ArrayList<>();
+            List<SecureDexMetadataWithCompanionPaths> sdmSdcFilesToKeep = new ArrayList<>();
             List<RuntimeArtifactsPath> runtimeArtifactsToKeep = new ArrayList<>();
 
             for (PackageState pkgState : snapshot.getPackageStates().values()) {
@@ -1163,11 +1159,12 @@ public final class ArtManagerLocal {
                             mInjector.getArtFileManager().getUsableArtifacts(pkgState, pkg);
                     artifactsToKeep.addAll(artifactLists.artifacts());
                     vdexFilesToKeep.addAll(artifactLists.vdexFiles());
+                    sdmSdcFilesToKeep.addAll(artifactLists.sdmFiles());
                     runtimeArtifactsToKeep.addAll(artifactLists.runtimeArtifacts());
                 }
             }
             return mInjector.getArtd().cleanup(profilesToKeep, artifactsToKeep, vdexFilesToKeep,
-                    runtimeArtifactsToKeep,
+                    sdmSdcFilesToKeep, runtimeArtifactsToKeep,
                     SdkLevel.isAtLeastV() && mInjector.getPreRebootDexoptJob().hasStarted());
         } catch (RemoteException e) {
             Utils.logArtdException(e);
@@ -1208,7 +1205,7 @@ public final class ArtManagerLocal {
                                                              .refProfiles()
                                                              .stream()
                                                              .map(AidlUtils::toWritableProfilePath)
-                                                             .collect(Collectors.toList());
+                                                             .toList();
                 try {
                     // The artd method commits all files somewhat transactionally. Here, we are
                     // committing files transactionally at the package level just for simplicity. In
@@ -1230,6 +1227,57 @@ public final class ArtManagerLocal {
             }
         } catch (RemoteException e) {
             Utils.logArtdException(e);
+        }
+    }
+
+    /**
+     * Forces all running processes of the given package to flush profiles to the disk.
+     *
+     * @return true on success; false on timeout or artd crash.
+     *
+     * @hide
+     */
+    @RequiresApi(Build.VERSION_CODES.UPSIDE_DOWN_CAKE)
+    public boolean flushProfiles(
+            @NonNull PackageManagerLocal.FilteredSnapshot snapshot, @NonNull String packageName) {
+        PackageState pkgState = Utils.getPackageStateOrThrow(snapshot, packageName);
+        List<RunningAppProcessInfo> infoList =
+                Utils.getRunningProcessInfoForPackage(mInjector.getActivityManager(), pkgState);
+
+        try (var pin = mInjector.createArtdPin()) {
+            boolean success = true;
+            for (RunningAppProcessInfo info : infoList) {
+                PrimaryCurProfilePath profilePath = AidlUtils.buildPrimaryCurProfilePath(
+                        UserHandle.getUserHandleForUid(info.uid).getIdentifier(), packageName,
+                        PrimaryDexUtils.getProfileName(null /* splitName */));
+                IArtdNotification notification =
+                        mInjector.getArtd().initProfileSaveNotification(profilePath, info.pid);
+
+                // Check if the process is still there.
+                if (!Utils.getRunningProcessInfoForPackage(mInjector.getActivityManager(), pkgState)
+                                .stream()
+                                .anyMatch(running_info -> running_info.pid == info.pid)) {
+                    continue;
+                }
+
+                // Send signal and wait one by one, to avoid the race among processes on the same
+                // profile file.
+                try {
+                    mInjector.kill(info.pid, OsConstants.SIGUSR1);
+                    success &= notification.wait(1000 /* timeoutMs */);
+                } catch (ErrnoException | ServiceSpecificException e) {
+                    if (e instanceof ErrnoException ee) {
+                        if (ee.errno == OsConstants.ESRCH) {
+                            continue;
+                        }
+                    }
+                    AsLog.w("Failed to flush profile on pid " + info.pid, e);
+                }
+            }
+            return success;
+        } catch (RemoteException e) {
+            Utils.logArtdException(e);
+            return false;
         }
     }
 
@@ -1267,7 +1315,7 @@ public final class ArtManagerLocal {
             List<String> packages = getDefaultPackages(snapshot, ReasonMapping.REASON_INACTIVE)
                                             .stream()
                                             .filter(pkg -> !excludedPackages.contains(pkg))
-                                            .collect(Collectors.toList());
+                                            .toList();
             if (!packages.isEmpty()) {
                 AsLog.i("Storage is low. Downgrading " + packages.size() + " inactive packages");
                 DexoptParams params =
@@ -1314,14 +1362,14 @@ public final class ArtManagerLocal {
                         .stream()
                         .filter(packageResult
                                 -> packageResult.getDexContainerFileDexoptResults()
-                                           .stream()
-                                           .anyMatch(fileResult
-                                                   -> DexFile.isProfileGuidedCompilerFilter(
-                                                              fileResult.getActualCompilerFilter())
-                                                           && fileResult.getStatus()
-                                                                   == DexoptResult.DEXOPT_SKIPPED))
+                                        .stream()
+                                        .anyMatch(fileResult
+                                                -> DexFile.isProfileGuidedCompilerFilter(
+                                                           fileResult.getActualCompilerFilter())
+                                                        && fileResult.getStatus()
+                                                                == DexoptResult.DEXOPT_SKIPPED))
                         .map(packageResult -> packageResult.getPackageName())
-                        .collect(Collectors.toList());
+                        .toList();
 
         DexoptParams dexoptParams = mainParams.toBuilder()
                                             .setFlags(ArtFlags.FLAG_FORCE_MERGE_PROFILE,
@@ -1370,7 +1418,7 @@ public final class ArtManagerLocal {
                         packages, true /* keepRecent */, true /* descending */);
         }
 
-        return packages.map(PackageState::getPackageName).collect(Collectors.toList());
+        return packages.map(PackageState::getPackageName).toList();
     }
 
     @RequiresApi(Build.VERSION_CODES.UPSIDE_DOWN_CAKE)
@@ -1622,6 +1670,7 @@ public final class ArtManagerLocal {
             getUserManager();
             getDexUseManager();
             getStorageManager();
+            getActivityManager();
             GlobalInjector.getInstance().checkArtModuleServiceManager();
 
             // `PreRebootDexoptJob` does not depend on external dependencies, so unlike the calls
@@ -1763,6 +1812,17 @@ public final class ArtManagerLocal {
         @NonNull
         public PreRebootStatsReporter getPreRebootStatsReporter() {
             return new PreRebootStatsReporter();
+        }
+
+        @RequiresApi(Build.VERSION_CODES.UPSIDE_DOWN_CAKE)
+        @NonNull
+        public ActivityManager getActivityManager() {
+            return Objects.requireNonNull(mContext.getSystemService(ActivityManager.class));
+        }
+
+        @RequiresApi(Build.VERSION_CODES.UPSIDE_DOWN_CAKE)
+        public void kill(int pid, int signal) throws ErrnoException {
+            Os.kill(pid, signal);
         }
     }
 }
